<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android-api</string>
    <string name="hello_world">android api(4.4)</string>
    <!-- 图片测试 -->
    <string name="image_button">图片测试</string>
    <string name="image_view_title">图片测试</string>

    <!-- 登陆测试 -->
    <string name="login_button">登陆测试</string>
    <string name="login_view_title">登陆测试</string>
    <string name="action_settings">设置</string>
    <string name="login_label_username">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_username_hint">用户名</string>

    <!-- list测试 -->
    <string name="list_button">列表测试</string>
    <string name="list_title">列表测试</string>

    <!-- table测试 -->
    <string name="table_button">表格测试</string>
    <string name="table_title">表格测试</string>

    <!-- 进程管理 -->
    <string name="process_button">进程测试</string>
    <string name="process_title">进程测试</string>


    <!--通讯录测试 -->
    <string name="contact_button">通信录测试</string>
    <string name="contact_title">通信录测试</string>

    <!--短信测试 -->
    <string name="msg_button">短信测试</string>
    <string name="msg_title">短信测试</string>

    <!--电话测试 -->
    <string name="phone_button">电话测试</string>
    <string name="phone_title">电话测试</string>

    <!--摄像头测试 -->
    <string name="camera_button">摄像头测试</string>
    <string name="camera_title">摄像头测试</string>

    <!-- GPS -->
    <string name="GPS_button">GPS测试</string>
    <string name="GPS_title">GPS测试</string>


    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_process">ProcessActivity</string>

</resources>
