<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_button"
        android:id="@+id/tatble_test_button"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_button"
        android:id="@+id/list_test_button"
        android:layout_alignBottom="@+id/login_button"
        android:layout_alignStart="@+id/tatble_test_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process_button"
        android:id="@+id/process_test_button"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_button"
        android:id="@+id/contact_button"
        android:layout_alignBottom="@+id/process_test_button"
        android:layout_alignStart="@+id/list_test_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_button"
        android:id="@+id/msg_button"
        android:layout_below="@+id/process_test_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_button"
        android:id="@+id/camera_button"
        android:layout_alignBottom="@+id/msg_button"
        android:layout_alignStart="@+id/contact_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GPS_button"
        android:id="@+id/gps_button"
        android:layout_below="@+id/msg_button"
        android:layout_alignParentStart="true" />

</RelativeLayout>
