<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.android_api.LoginActivity">

    <TextView android:text="@string/login_view_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title" />

    <!-- 账号 -->
    <TextView
        android:id="@+id/login_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label_username"
        android:layout_above="@+id/login_password_input"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="94dp" />
    <EditText
        android:id="@+id/username_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_hint"
        android:singleLine="true"
        android:inputType="text"
        android:layout_alignTop="@+id/login_user_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
    <!-- 密码 text -->
    <TextView
        android:id="@+id/login_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label_password"
        android:layout_marginBottom="102dp"
        android:layout_above="@+id/login_in"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />-

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登陆"
        android:id="@+id/login_in"
        android:layout_marginBottom="138dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/login_cacle_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="取消"
        android:id="@+id/login_cacle_button"
        android:layout_alignTop="@+id/login_in"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="57dp" />

</RelativeLayout>
